refactor MCP schema generation to McpServerImpl